objects/sumoapp__EventType__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>sumoapp__Category__c</referenceTo>
        <relationshipLabel>SUMO Event Types</relationshipLabel>
        <relationshipName>SUMOEventTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Color__c</fullName>
        <defaultValue>&quot;#5679C0&quot;</defaultValue>
        <description>Html Color Code</description>
        <label>Color</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                    <label>15 Minutes</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30 Minutes</label>
                </value>
                <value>
                    <fullName>45</fullName>
                    <label>45 Minutes</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <default>true</default>
                    <label>1 hour</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>1.5 hour</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>2 hours</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>2.5 hours</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>3 hours</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>3.5 hours</label>
                </value>
                <value>
                    <fullName>240</fullName>
                    <label>4 hours</label>
                </value>
                <value>
                    <fullName>270</fullName>
                    <label>4.5 hours</label>
                </value>
                <value>
                    <fullName>300</fullName>
                    <label>5 hours</label>
                </value>
                <value>
                    <fullName>330</fullName>
                    <label>5.5 hours</label>
                </value>
                <value>
                    <fullName>360</fullName>
                    <label>6 hours</label>
                </value>
                <value>
                    <fullName>390</fullName>
                    <label>6.5 hours</label>
                </value>
                <value>
                    <fullName>420</fullName>
                    <label>7 hours</label>
                </value>
                <value>
                    <fullName>450</fullName>
                    <label>7.5 hours</label>
                </value>
                <value>
                    <fullName>480</fullName>
                    <label>8 hours</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__EventDescription__c</fullName>
        <label>Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventName__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__FrequencyNumber__c</fullName>
        <label>Frequency Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__FrequencyType__c</fullName>
        <label>Frequency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAILY</fullName>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>WEEKLY</fullName>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>MONTHLY</fullName>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>SPECIFIC_DATES</fullName>
                    <isActive>false</isActive>
                    <label>SPECIFIC_DATES</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__HostSkill__c</fullName>
        <label>Host Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Hosts__c</fullName>
        <label>Host(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>sumoapp__Location__c</referenceTo>
        <relationshipLabel>SUMO Event Types</relationshipLabel>
        <relationshipName>SUMOEventTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringCount__c</fullName>
        <label>Recurring Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringMonthDay__c</fullName>
        <label>Recurring Month Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__RecurringWeekDay__c</fullName>
        <label>Recurring Week Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Su</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>M</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Tu</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>W</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Th</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Fr</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Sa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__Resources__c</fullName>
        <label>Resource(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Virtual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual</label>
        <type>Checkbox</type>
    </fields>
    <label>SUMO Event Type</label>
    <listViews>
        <fullName>sumoapp__All</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__EventName__c</columns>
        <columns>sumoapp__Color__c</columns>
        <columns>sumoapp__Duration__c</columns>
        <columns>sumoapp__HostSkill__c</columns>
        <columns>sumoapp__Hosts__c</columns>
        <columns>sumoapp__Category__c</columns>
        <columns>sumoapp__IsRecurring__c</columns>
        <columns>sumoapp__Virtual__c</columns>
        <columns>sumoapp__Resources__c</columns>
        <filterScope>Everything</filterScope>
        <label>All SUMO Event Types</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Event Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>